# BioAgents

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  Untitled  docker-compose.yml  output.txt  pyproject.toml  pytest.ini  requirements.txt  test_api_interception.py  test_format_conv.py  test_workflow.json
ace/: llm.py  logger.py  playbook_utils.py  utils.py
bioagents/: graph.py  graph_streaming.py  limits.py  main.py  test_tool_filter.py  truncating_tool_node.py
debug_tool_outputs/: integration_real_webpage.txt  integration_webpage_error.txt  mock_webpage_error.txt  mock_webpage_test.txt  test_debug_output.json
docker/: entrypoint.sh
docs/: ACE_CONFIGURATION.md  DEVELOPMENT.md  LANGSMITH_SETUP.md  PROMPT_ENGINEERING.md  ipython_usage.md
ethanol_binder_designs/: target_molecule.sdf
examples/: ace_integration_demo.py  coder_agent_interactive_demo.py  ml_agent_demo.py  multi_agent_demo.py  protein_binder_design_demo.py  research_agent_demo.py  scientific_workflow_demo.py  stella_benchmark_eval.py  tool_builder_demo.py  tool_builder_demo_2.py  tool_universe_agent_demo.py
experiment_runs/: 20260331_190839_949d0c63bd0c4c0fb299e91435897de2.json  20260331_191959_23c13e097c1042f9b533f366a30c8a57.json  20260331_192406_7a56441e9dc74f5989f66915983b9e90.json  20260331_192804_877d2700e0454f01b1b3cc186d434c6f.json  20260331_194728_30f099afc16b47ca8e42910548c7dba4.json  20260331_200120_726033c7ae2345fba001f59e5eecd54c.json  20260331_200408_690c0eca87d143d8b8f158828bfb3ae9.json  20260331_201005_839dec6048be4c4484cd54647a49ff6d.json  20260401_002015_fddb8c91f41b4dd18e028b55df98c398.json  20260401_002518_3fc86e5f957f4110a13a65f44ebef666.json  20260401_002816_d9ca2d349a0d4463abe6bfbec7bd1d36.json  20260401_081057_8d5604a5bdc54ab1b4fa2af41ae0678e.json  20260401_092021_d99de97fd0b84e4aaa62dadcf1b34fbb.json  20260401_092536_f36dad8669e747a9afca0b2abdeb3781.json  20260401_092755_0bde4d5d4af94ee78402e13dd7cca86c.json  20260401_092847_67d2dd5521e146b8b7c90ba270190d78.json  20260401_094638_70e685d1b4b7485cb69793ee65ed8a6a.json  20260401_095511_0ea70318f99d4448a034c6dc62088dea.json  20260401_105026_8f19a042926347f097077b7ebc3eb35a.json  20260401_112935_446d2561ebcb49db89c463dcd11a0387.json  20260401_120608_2a7fa072d77f460785f1f1a0eda41b58.json  20260406_131513_c3bf1a036d0a4ea88ff7095942dd3ae1.json  20260406_131910_63e94daecadf48eda65bb37f53e931e2.json  20260406_134720_aaef8f7d64d04a41be09d0affa2ebeee.json  20260406_141032_e51a6f7b187043c29fc7a3724a9203b7.json  20260406_145848_88f47a72573e481ab4a3dcd704bf7e6d.json  20260406_152938_ebc63a8e57064918b843dc8dc2463b2d.json  20260406_153939_deba06361fed496ba1da856a71dc2bbc.json  20260406_154604_3c6533e40c4043888d336811d0b0bec1.json  20260406_155644_e1eea073e6ba4d38826b4dbe93dd8e2f.json  20260406_160356_ca888d436d6948e2baf1b8010c80d1fc.json  20260406_161216_56ae5a6a7d7b4c2998d2a0e9cf58da17.json  20260406_161953_4572d0bbb4364df5ab03332ba0f1858b.json  20260406_162122_c79c426f2e8c49e382c80ef3e076ad0c.json  20260406_163118_e30090b1e4024807ac71b61965cceb05.json  20260406_163418_45590c11fc3948d39204145446bc88b1.json  20260406_163747_9ab23b6ac31d408bb68f639c133bff76.json  (+10 more)
frontend/: __init__.py  (+4 more)
(+209 files in other folders)
